# axionvera-network

./: Cargo.toml  DELEGATION_PR_DESCRIPTION.md  README.md  STATE_MACHINE_IMPLEMENTATION.md
.dbg/: cargo-sandbox-failure.env
.github/workflows/: e2e-tests.yml  protocol-integration-tests.yml
contracts/accounting/: Cargo.toml
contracts/accounting/src/: lib.rs
contracts/assets/: Cargo.toml
contracts/assets/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/auth/: Cargo.toml
contracts/auth/src/: lib.rs
contracts/config/: Cargo.toml
contracts/config/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/core/: Cargo.toml
contracts/core/src/: lib.rs
contracts/events/src/: lib.rs
contracts/integrations/: Cargo.toml
contracts/integrations/src/: lib.rs  test.rs
contracts/interfaces/src/: lib.rs
contracts/metrics/: Cargo.toml
contracts/orchestrator/: Cargo.toml
contracts/policy/: Cargo.toml
contracts/rewards/: Cargo.toml
contracts/security/: Cargo.toml
contracts/state/: Cargo.toml
contracts/storage/: Cargo.toml
contracts/treasury/: Cargo.toml
contracts/upgrades/: Cargo.toml
contracts/vault-contract/: Cargo.toml  MULTI_ASSET_IMPLEMENTATION.md
contracts/vault-contract/src/: access.rs  cross_contract.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/vault-contract/test_snapshots/: test_cannot_delegate_to_self.1.json  test_create_delegation.1.json  test_delegated_action_requires_correct_permission.1.json  test_delegated_claim_rewards.1.json  test_delegated_deposit.1.json  test_delegated_withdraw.1.json  test_delegation_events.1.json  test_expired_delegation_rejected.1.json  test_list_delegations.1.json  test_revoke_delegation.1.json  test_unauthorized_operator_rejected.1.json
contracts/vault-contract/test_snapshots/test/: test_add_asset.1.json  test_asset_reward_claiming.1.json  test_asset_reward_distribution.1.json  test_deposit_event_indexing.1.json  test_event_topic_standard.1.json  test_event_version_field.1.json  test_independent_asset_tracking.1.json  test_multiple_asset_deposits.1.json  test_pause_unpause_events.1.json  test_set_penalty_rate_rejected_when_above_max.1.json  test_unsupported_asset_fails.1.json  test_vesting.1.json
contracts/vault-contract/tests/: delegation_test.rs
docs/: CROSS_CONTRACT.md  EVENTS.md  ORCHESTRATOR.md  TREASURY_ALLOCATION.md  contract-spec.md  contract-storage.md  pr-storage-optimization-216.md
docs/testing/: INVARIANTS.md
network-node/src/: chain_params.rs  database.rs  governance.rs  indexer.rs
tests/assets/: assets.test.ts
tests/config/: config.test.ts
tests/events/: event_standards.test.ts
tests/integration/: PROTOCOL_INTEGRATION.md  grpc.test.ts
tests/invariants/: protocol_invariants.rs
tests/metrics/: metrics_test.rs
tests/rewards/: README.md
tests/security/: Cargo.toml  pause_test.rs
tests/security/tests/: access_policy_framework.rs
tests/state/: state_machine.test.ts
tests/storage/: versioning_test.rs
tests/upgrades/: validator_test.rs
(+32 files in other folders)
