[workspace]
resolver = "2"
members = [
  "contracts/auth",
  "contracts/vault-contract",
  "contracts/vault-contract-v2",
  "contracts/events",
  "contracts/core",
  "contracts/interfaces",
  "contracts/orchestrator",
  "network-node",
  "tests/security",
]


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
