[workspace]
resolver = "2"
members = [
  "contracts/auth",
  "contracts/vault-contract",
  "contracts/vault-contract-v2",
  "contracts/events",
  "contracts/accounting",
  "contracts/core",
  "contracts/interfaces",
  "contracts/orchestrator",
  "contracts/rewards",
  "network-node",
  "tests/security",
]


[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
