[package]
name = "axionvera-vault-contract"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"
axionvera-auth = { path = "../auth" }
axionvera-events = { path = "../events" }
axionvera-core = { path = "../core" }
axionvera-interfaces = { path = "../interfaces" }
axionvera-security = { path = "../security" }

[dev-dependencies]
proptest = "1.6.0"
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
axionvera-vault-contract-v2 = { path = "../vault-contract-v2" }
